--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -1,6 +1,6 @@
 @import "../../assets/icon/variables";
 
-.app-root {
+.app-home {
 
   top: 0;
   right: 0;
@@ -52,6 +52,4 @@
     padding: 0 12px;
   }
 } 
-
-
 
