--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -1,7 +1,25 @@
-@import "../../assets/variables";
+@import "../../assets/esri/themes/dark/main.scss";
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 3.5rem;
+  background-color: $background-color;
+}
+
+.header-text {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: $font-color;
+  padding: 0 12px;
+}
+
+.main {
+  display: flex;
+}
 
 .app-home {
-
   top: 0;
   right: 0;
   bottom: 0;
@@ -16,40 +34,5 @@
 
   width: 100%;
   height: 100%;
-
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-basis: 3.5rem;
-
-    background-color: $primary-color;
-    color: $primary-text-color;
-    box-shadow: 0 2px 1px -1px $primary-text-color;
-  }
-
-  main {
-    display: flex;
-    flex-direction: column;
-    flex-basis: auto;
-    flex-shrink: 1;
-    flex-grow: 1;
-    overflow-y: scroll;
-
-    color: $primary-text-color;
-    background: darken($primary-background-color, 3%);
-
-    > div {
-      flex-grow: 1;
-      flex-basis: auto;
-    }
-  }
-  
-  h1 {
-    font-size: 1.4rem;
-    font-weight: 500;
-    color: $primary-background-color;
-    padding: 0 12px;
-  }
-} 
+}
 
