--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -3,7 +3,6 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-basis: 3.5rem;
   background-color: $background-color;
 }
@@ -13,10 +12,6 @@
   font-weight: 500;
   color: $font-color;
   padding: 0 12px;
-}
-
-.main {
-  display: flex;
 }
 
 .app-home {
@@ -30,9 +25,12 @@
   display: flex;
 
   flex-direction: column;
-  justify-content: space-between;
 
   width: 100%;
+  height: 100%;
+}
+
+.map-component {
   height: 100%;
 }
 
